@@ -29,19 +29,19 @@ import java.util.List;
 public class GanttChart extends AbstractChart {
 
     public GanttChart(Context context, String projectRequestKey, String relateCssPath, String column, String sprintName, List<Throwable> exception,
-                      LocalDateTime now, boolean completed, Sprint sprint/*, int chartWidth, int chartHeight*/, String cssClass,
+                      LocalDateTime now, boolean completed, Sprint sprint, String cssClass,
                       BurnDownGraphicsTheme graphicsTheme) throws Exception {
-        super("Gantt Chart", projectRequestKey, relateCssPath, column, sprintName, "gantt_map", null/*, chartWidth, chartHeight*/, cssClass, graphicsTheme);
-        getRenderers().add(new GanttRenderer(context, sprintName, exception, now, completed, sprint/*, chartWidth, chartHeight*/, cssClass, graphicsTheme));
-        this.setChartWidth(getRenderers().get(0).chartWidth);
-        this.setChartHeight(getRenderers().get(0).chartHeight + captionElement.height + footerElement.height - 1);
+        super("Gantt Chart", projectRequestKey, relateCssPath, column, sprintName, null, cssClass, graphicsTheme);
+        getRenderers().add(new GanttRenderer(context, sprintName, exception, now, completed, sprint, cssClass, graphicsTheme));
+        this.setChartWidth(getRenderers().getFirst().chartWidth);
+        this.setChartHeight(getRenderers().getFirst().chartHeight + captionElement.height + footerElement.height - 1);
         captionElement.width = getChartWidth();
-        footerElement.y      = getRenderers().get(0).chartHeight + captionElement.height;
+        footerElement.y      = getRenderers().getFirst().chartHeight + captionElement.height;
     }
 
     @Override
     protected void createReport() throws Exception {
-        getRenderers().get(0).draw(graphics2D, 0, captionElement.height);
+        getRenderers().getFirst().draw(graphics2D, 0, captionElement.height);
     }
 
 }
